# AIS4104-ROS1-template

./: .gitignore
ris/: CMakeLists.txt  package.xml
ris/src/: CMakeLists.txt
ris/src/hello_client/: CMakeLists.txt  main.cpp
ris/src/hello_publisher/: CMakeLists.txt  main.cpp
ris/src/hello_server/: CMakeLists.txt  main.cpp
ris/src/hello_subscriber/: CMakeLists.txt  main.cpp
ris/src/hello_world/: CMakeLists.txt  main.cpp
ris/src/hjalmar/: CMakeLists.txt  main.cpp
ris/src/hjalmar/sub/: line_mapping.cpp  line_mapping.h
ris/src/line_segment/: CMakeLists.txt  main.cpp
ris/src/line_segment/include/: laser_ros.h  line_detect.h  struct.h
ris/src/line_segment/launch/: line.launch
ris/src/line_segment/src/: laser_ros.cpp  line_detect.cpp
ris/src/pose_predictor/: CMakeLists.txt  KalmanFilter.h  kalmanFilter.cpp  main.cpp
ris/src/vision_aruko/: CMakeLists.txt  main.cpp
ris/src/vision_aruko/cpp/: CMakeLists.txt  aruco_webcam.cpp  canny.cpp  haarcascade.cpp  hello_cv.cpp  webcam.cpp
ris_msgs/: CMakeLists.txt  package.xml
