<?xml version="1.0"?>
<package format="2">
    <name>ris</name>
    <version>0.0.1</version>
    <description>
        Template project for AIS4104 "Robotics and Intelligent Systems with Project"
    </description>

    <author email="aleksander.skrede@ntnu.com">Aleksander Skrede</author>
    <maintainer email="aleksander.skrede@ntnu.com">Aleksander Skrede</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>ris_msgs</build_depend>
    <build_depend>message_runtime</build_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>roslib</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>ris_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
